# SatsConnect

./: .expoignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  BTC_PLUS_PLUS_DEMO_GUIDE.md  CI-CD-SETUP.md  CI-STATUS.md  COMMIT_SUMMARY.md  COMPREHENSIVE_QA_INTEGRATION_SUMMARY.md  CRYPTO_UTILS_IMPROVEMENTS_SUMMARY.md  DEPENDENCY-MANAGEMENT.md  DEPLOYMENT-CHECKLIST.md  DIAGNOSIS_AND_SOLUTION.md  EXPO_GO_TESTING_GUIDE.md  EXPO_TESTING_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE.md  MOCK_DATA_REMOVAL_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_5_GLOBAL_EXPANSION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_SUMMARY.md  README.md  RUST_BUILD_FINAL_FIX.md  RUST_ENGINE_FIX_SUMMARY.md  SECURE_STORAGE_V2_FINAL_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT_V2.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TERMINAL_ERRORS_FIXED.md  demo.html  docker-compose.prod.yml  docker-compose.yml  fix-rust-formatting.sh  git-commit-production-infrastructure.bat  git-commit-production-infrastructure.ps1  open-demo.bat  open-web-demo.bat  (+12 more)
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  dependabot.yml  deploy.yml  release.yml  security.yml
backend/node-orchestrator/: .dockerignore  .eslintrc.json  Dockerfile  FIAT_API.md  README.md  TESTING.md  docker-compose.yml  env.example  jest.config.js  package-lock.json  package.json  test-api.js  tsconfig.json
backend/rust-engine/: CONFIG.md  Cargo.toml  Dockerfile  build.rs  test_client.rs  test_payment_client.rs  test_wallet_client.rs
backend/rust-engine/proto/: payment.proto  wallet.proto
backend/rust-engine/src/: bitcoin_client.rs  config.rs  engine.rs  grpc_services.rs  lib.rs  lightning_engine.rs  main.rs  payment.rs  secure_storage.rs  wallet.rs
backend/rust-engine/src/ai/: behavioral_analysis.rs  fraud_detection.rs  machine_learning.rs  mod.rs
backend/rust-engine/src/lightning/: channel_manager.rs  channel_rebalancer.rs  invoice_handler.rs  mod.rs  network_graph.rs  payment_processor.rs  regtest_setup.rs  testnet_checker.rs
backend/rust-engine/src/lsp/: lsp_client.rs  lsp_provider.rs  mod.rs
backend/rust-engine/src/monitoring/: alerts.rs  health_check.rs  metrics.rs  mod.rs  performance_monitor.rs
backend/rust-engine/src/multi_currency/: currency_service.rs  exchange_rates.rs  fiat_providers.rs  mod.rs
backend/rust-engine/src/notifications/: email_notifications.rs  mod.rs  push_notifications.rs  sms_notifications.rs
backend/rust-engine/src/performance/: async_lightning_engine.rs  mod.rs  payment_processor.rs
backend/rust-engine/src/privacy/: coinjoin.rs  mixing_service.rs  mod.rs  privacy_engine.rs  tor_support.rs
backend/rust-engine/src/proto/: satsconnect.payment.v1.rs  satsconnect.wallet.v1.rs
backend/rust-engine/src/security/: authentication.rs  encryption.rs  mod.rs
backend/rust-engine/src/security/advanced/: biometric_auth.rs  hardware_wallet.rs  hsm_integration.rs  mod.rs  secure_enclave.rs
backend/rust-engine/tests/: integration_test.rs
infra/ci-cd/: github-actions.yml
infra/deployment/: production-deploy.sh
infra/docker/: api-gateway.Dockerfile  (+3 more)
mobile/: .eslintrc.js  README.md  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
monitoring/: prometheus.yml
nginx/: nginx.conf
partnerships/: strategic-partnerships.md
scripts/: deploy.sh  execute-immediate-actions.sh  install-dependencies.sh  integration-qa.sh  master-qa-execution.sh  performance-test.sh  refactor-code-quality.sh  security-audit.sh  user-acceptance-test.sh
(+114 files in other folders)
